<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_book"
            android:title="@string/nav_courses" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_task"
            android:title="@string/nav_tasks" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="Configuración">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="Configuración" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="Acerca de" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="Cerrar Sesión" />
        </menu>
    </item>
</menu>